<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UITest2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plslogin">请登录</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="title_activity_linear_layout">LinearLayout</string>
    <string name="username">用户名</string>
    <string name="pwd">******</string>
    <string name="signin">注册</string>
    <string name="title_activity_relativelayout">Relativelayout</string>
    <string name="inputusername">username</string>
    <string name="inputpwd">密码</string>
    <string name="register">注册</string>

</resources>
