<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.g.uitest2.LinearLayout" >

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:text="@string/login"
	        android:layout_width="match_parent"  
	        android:layout_height="wrap_content"  
	        android:textSize="20sp"  
            
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_margin="10dip"
        android:minHeight="165dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            android:singleLine="true"
            android:paddingTop="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="5dip"
            android:layout_marginLeft="5dip"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:inputType="textPersonName"
            android:text="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:paddingTop="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="5dip"
            android:layout_marginLeft="5dip"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:text="@string/pwd" 
            />

        <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_marginTop="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:weightSum="11" >

            <TextView
                android:id="@+id/signin"
                android:text="@string/signin"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:textColor="#7089c0"
                android:textSize="18sp" 
                android:gravity="center_vertical"
                />
            
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:text="@string/login"
                android:textColor="#1C52EC"
                android:textSize="18sp"
                android:layout_weight="1"
                android:minWidth="80dip"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
